[package]
name = "permission_test"
version = "0.1.0"
authors = ["Me <user@rust-lang.org>"]
build = "build.rs"

[features]
default = ["serde_codegen"]
nightly = ["serde_derive"]

[build-dependencies]
serde_codegen = { version = "^0.8", optional = true }

[dependencies]
serde = "^0.8"
serde_derive = { version = "^0.8", optional = true }
serde_json = "^0.8"
libc = "0.2"
seahash = "3.0.5"
